# pm-wrapper

./: .gitignore  Dockerfile  LICENSE.md  Makefile  README.md
docs/: clang-plugin-missing.md  clang-plugin-workflow.md  evaluation.md  ideas.md  reasoning.md
docs/snippets/: README.md
docs/snippets/alloc/: alloc_atlas.c  alloc_pm.c  alloc_pmdk.c  alloc_vm.c
docs/snippets/array/: array_atlas.c  array_pm.c  array_pmdk.c  array_vm.c
docs/snippets/init/: init_atlas.c  init_pm.c  init_pmdk.c
docs/snippets/multiple_region/: multiple_region_pm.c  multiple_region_pmdk.c
docs/snippets/pointer_arguments/: pointer_arguments_atlas.c  pointer_arguments_pm.c  pointer_arguments_pmdk.c  pointer_arguments_vm.c
docs/snippets/store_pointer/: store_pointer_atlas.c  store_pointer_pm.c  store_pointer_pmdk.c
docs/snippets/transaction/: transaction_atlas.c  transaction_pm.c  transaction_pmdk.c
src/: context_map.c  context_map.h  ex_common.h  pm_wrapper.c  pm_wrapper.h  pmdk_backend.c  pmdk_backend.h  region_id_map.c  region_id_map.h
src/backends/: atlas_backend.c  atlas_backend.h  pmdk_backend.c  pmdk_backend.h
src/benchmarks/: Makefile
src/benchmarks/btree/: main.c  pm_wrapper_btree.c  pm_wrapper_btree.h  pmdk.c  pmdk.h
src/benchmarks/multiregion/: main.c  pm_wrapper_multiregion.c  pm_wrapper_multiregion.h  pmdk_multiregion.c  pmdk_multiregion.h
src/benchmarks/queue/: main.c  pm_wrapper_queue.c  pm_wrapper_queue.h  pmdk_queue.c  pmdk_queue.h
src/benchmarks/store/: main.c  pm_wrapper_store.c  pm_wrapper_store.h  pmdk_store.c  pmdk_store.h
src/clang-plugin/: CMakeLists.txt  ExpressionEvaluator.cpp  ExpressionEvaluator.h  ExpressionWriter.cpp  ExpressionWriter.h  FunctionEvaluator.cpp  FunctionEvaluator.h  GlobalContext.cpp  GlobalContext.h  GlobalEvaluator.cpp  GlobalEvaluator.h  PmWrapper.cpp  PmWrapperRun.cpp  PointerTypeAttribute.cpp  PointerTypeAttribute.h  Types.h  Util.h  VarContext.cpp  VarContext.h  VarManager.cpp  VarManager.h  test_abc.c  test_abc_out.c
src/clang-plugin/test-programs/: a.out  btree.c  btree_no_main.c  compile_commands.json  hashmap_internal.h  linked_list.c  linked_list.h  linked_list_expanded.c  main.c  multiregion.c  perf.data  perf.data.old  queue.c  store.c  test.c  test1.c  test1.ll  test_abc.c  test_abc_out.c
src/clang-plugin/test-programs/.cache/clangd/index/: btree.c.093A9B335F3051C6.idx  main.c.73D593FF2AD4CC22.idx  test.c.6D98A8B9B1150E95.idx  test.h.92C9F6563A4BA92F.idx  test1.c.15B007ACF6BFC5AF.idx
src/compiler/: CMakeLists.txt  ExpressionEvaluator.cpp  ExpressionEvaluator.h  ExpressionWriter.cpp  FunctionEvaluator.h  GlobalEvaluator.cpp  PmWrapperRun.cpp  PointerTypeAttribute.cpp  Types.h  VarManager.cpp
src/compiler/test-programs/: btree.c  cases.c  compile_commands.json  hashmap.c  hashmap_alt.c  linked_list.c  pi.c  test.c  test.h  test1.c  test_abc.c  test_abc_out.c
src/examples/: btree_wrapper.c  multiple_region.c
src/examples/btree/: btree_direct.c  btree_wrapper.c
src/examples/multiple_region/: multiple_region.c
src/hashmap/: hashmap.c  hashmap.h  hashmap_base.h
src/include/: pm_wrapper.h
src/runtime/: context_map.c  context_map.h  pm_wrapper.c  pm_wrapper.h  region_id_map.c  region_id_map.h
src/runtime/hashmap/: hashmap.c  hashmap.h  hashmap_base.h
src/tests/multiple_region/: multiple_region_atlas.c  multiple_region_pmdk.c  multiple_region_test.c  multiple_region_test.h
src/tests/store/: store.c
src/vector/: vector.h
src/vscode-extension/: CHANGELOG.md  README.md  package-lock.json  package.json  pmwrappersense-0.0.1.vsix
src/vscode-extension/src/: extension.ts
